--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/iboyko21/node200-ejs-portfolio/issues"
   },
-  "homepage": "https://github.com/iboyko21/node200-ejs-portfolio#readme"
+  "homepage": "https://github.com/iboyko21/node200-ejs-portfolio#readme",
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  }
 }
